# jnigen-rs

./: Cargo.toml  TODO  X.java  java.txt  main.java  run-demo.sh
j2rs/: j2rs.cabal
j2rs/src/: AST.hs  Main.hs  Parser.hs  RustGen.hs
src/: java.rs  lib.rs
