name:                j2rs
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable j2rs
  hs-source-dirs:      src
  main-is:             Main.hs

  other-modules:       Parser, AST, RustGen

  build-depends:       base, parsec, text, mtl
  default-language:    Haskell2010
